# cicada

./: .clippy.toml  .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  ChangeLog.md  LICENSE  Makefile  README.md
.github/workflows/: build-armv7-unknown-linux-gnueabihf.yml  build-binaries.yml  build-linux-binaries.yml  run-tests.yml  rust.yml
docs/: README.md  arithmetic.md  as-lib.md  built-in-cmd.md  builtins.md  cicada-vs-bash.md  completion.md  envs.md  expansions.md  faq.md  history.md  install.md  intro.md  jobc.md  prompt.md  rc-file.md  scripting.md
misc/: cicadarc-termux  inputrc
src/: binds.rs  build.rs  core.rs  ctime.rs  execute.rs  highlight.rs  history.rs  jobc.rs  jobs.rs  lib.rs  main.rs  parsers.rs  rcfile.rs  scripting.rs  shell.rs  signals.rs  tlog.rs  tools.rs  types.rs
src/builtins/: alias.rs  bg.rs  cd.rs  check.rs  cinfo.rs  exec.rs  exit.rs  export.rs  fg.rs  history.rs  jobs.rs  minfd.rs  mod.rs  read.rs  set.rs  source.rs  ulimit.rs  unalias.rs  unpath.rs  unset.rs  utils.rs  vox.rs
src/calculator/: mod.rs
src/completers/: dots.rs  env.rs  make.rs  mod.rs  path.rs  ssh.rs  utils.rs
src/libs/: colored.rs  fork.rs  mod.rs  os_type.rs  path.rs  pipes.rs  prefix.rs  progopts.rs  prompt.rs  re.rs  term_size.rs
src/parsers/: grammar.pest  locust.rs  mod.rs  parser_float.rs  parser_int.rs  parser_line.rs
src/prompt/: main.rs  mod.rs  multilines.rs  preset.rs
tests/: run_procs.txt  test_scripts.sh
tests/locusts/: 001.sh  002.sh  if-001.sh  if-002.sh  if-003.sh  if-else-if-001.sh  if-nest-001.sh  if-nest-002.sh  if-while-001.sh  while-001.sh  while-002.sh  while-003.sh  while-004.sh  while-if-001.sh  while-if-more-001.sh  while-if-more-002.sh
tests/scripts/: builtins-001.sh  builtins-001.sh.out  expansions-001.sh  expansions-001.sh.out  for-001.sh  for-001.sh.out  for-002.sh  for-002.sh.out  for-003.sh  for-003.sh.out  for-004.sh  for-004.sh.out  for-005.sh  for-005.sh.out  for-006.sh  for-006.sh.out  for-007.sh  for-007.sh.out  func-001.sh  func-001.sh.out  if-001.sh  if-001.sh.out  if-002.sh  if-002.sh.out  if-003.sh  if-003.sh.out  if-004.sh  if-004.sh.out  if-005.sh  if-005.sh.out  plain-001.sh  plain-001.sh.out  plain-002.sh  plain-002.sh.out  plain-003.sh  plain-003.sh.out  plain-004.sh  plain-004.sh.out  plain-005.sh  plain-005.sh.out  (+16 more)
