[package]
edition = "2021"
build = "src/build.rs"
name = "cicada"
version = "0.9.38"
authors = ["Hugo Wang <w@mitnk.com>"]

description = "A simple Bash-like Unix shell."
repository = "https://github.com/mitnk/cicada"
keywords = ["shell", "unix"]
categories = ["command-line-utilities", "command-line-interface", "development-tools"]
license = "MIT"

[profile.release]
strip = true

[lib]
name = "cicada"
path = "src/lib.rs"

[[bin]]
name = "cicada"
doc = false

[dependencies]
errno = "0.3.0"
exec = "0.3.0"
glob = "0.3.0"
lazy_static = "1.4.0"
libc = "0.2.0"
linefeed = "0.6.0"
nix = "0.26.0"
# todo: upgrade pest to 2.4
pest = "=2.3.1"
pest_derive = "2.0"
regex = "1"
yaml-rust = "0.4.0"
uuid = { version = "1.4", features = ["serde", "v4"] }
structopt = { version = "0.3", default-features = false }

[dependencies.clap]
# todo: upgrade clap to 4.x
version = "=3.2"
default-features = false
features = ["std"]

[dependencies.rusqlite]
version = "0.29"
features = ["bundled"]

[dependencies.time]
version = "0.3"
features = ["local-offset"]

[build-dependencies.time]
version = "0.3"
features = ["local-offset"]
