[package]
edition = "2021"
build = "src/build.rs"
name = "cicada"
version = "1.1.2"
authors = ["Hugo Wang <w@mitnk.com>"]

description = "A simple Bash-like Unix shell."
repository = "https://github.com/mitnk/cicada"
keywords = ["shell", "unix"]
categories = ["command-line-utilities", "command-line-interface", "development-tools"]
license = "MIT"

[profile.release]
lto = true
strip = true

[lib]
name = "cicada"
path = "src/lib.rs"

[[bin]]
name = "cicada"
doc = false

[dependencies]
errno = "0.3.0"
exec = "0.3.0"
glob = "0.3.0"
lazy_static = "1.5.0"
libc = "0.2.0"
# lineread = { path = "../lineread" }
lineread = "0.7.2"
pest = "2.7"
pest_derive = "2.7"
regex = "1"
yaml-rust = "0.4.0"
uuid = { version = "1.4", features = ["serde", "v4"] }
structopt = { version = "0.3", default-features = false }

[dependencies.nix]
version = "0.29.0"
features = ["fs", "process", "signal"]

[dependencies.clap]
version = "4.5"
default-features = false
features = ["std", "derive", "help"]

[dependencies.rusqlite]
version = "0.32"
features = ["bundled"]

[dependencies.time]
version = "0.3"
features = ["local-offset"]

[build-dependencies.time]
version = "0.3"
features = ["local-offset"]
